<resources>
    <string name="app_name">Blue Bank</string>
    <string name="account_type">Current Account</string>
    <string name="account_number">00&#8211;00&#8211;00   |   00000000</string>
    <string name="account_balance">£123.45</string>
    <string name="account_image">Account Image</string>

    <string name="transaction_date">17 Oct 2016</string>
    <string name="transaction_description">HARVEY NICHOLS</string>
    <string name="transaction_amount">£1230.50</string>

    <string name="sort_code">Sort Code</string>
    <string name="payment_account_number">Account Number</string>
    <string name="payment_reference">Payment Reference</string>
    <string name="payment_amount">Payment Amount</string>
    <string name="payment_from">Payment From:</string>
    <string name="payment_to">Payment To:</string>
    <string name="make_payment">Make Payment</string>
    <string name="otp_code">OTP Code</string>
    <string name="submit_otp">Submit OTP</string>
    <string name="otp_explanation">Your bank just sent you a text message with a one time password
    in it. Please enter it here to authorise this payment.</string>
</resources>
