<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_margin="16dp"
	android:elevation="5dp"
	app:cardCornerRadius="5dp"
	app:cardBackgroundColor="@android:color/white">

	<LinearLayout
		android:id="@+id/transactionCard"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal">

		<ImageView
			android:layout_width="36dp"
			android:layout_height="36dp"
			android:layout_gravity="center_vertical"
			android:id="@+id/transactionImage"
			android:layout_margin="@dimen/transaction_margin"
			android:contentDescription="@string/account_image"
			android:src="@drawable/ic_export"
			android:tint="@color/RBSBlue"/>

		<TextView
			android:id="@+id/transactionDate"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:text="@string/transaction_date"
			android:fontFamily="sans-serif"
			android:textColor="@color/RBSBlue"
			android:textSize="@dimen/text_body_2" />

		<TextView
			android:id="@+id/transactionDescription"
			android:layout_width="0dp"
			android:layout_weight="1"
			android:maxLines="1"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:paddingStart="@dimen/transaction_margin"
			android:fontFamily="sans-serif-medium"
			android:ellipsize="end"
			android:text="@string/transaction_description"
			android:textColor="@color/RBSBlue"
			android:textSize="@dimen/text_body_2"/>

		<TextView
			android:id="@+id/transactionAmount"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="center_vertical"
			android:padding="@dimen/transaction_margin"
			android:fontFamily="sans-serif"
			android:text="@string/transaction_amount"
			android:textColor="@color/RBSBlue"
			android:textSize="@dimen/text_body_2"
			android:textStyle="bold"/>

	</LinearLayout>
</android.support.v7.widget.CardView>