<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:layout_marginTop="@dimen/activity_vertical_margin"
	android:layout_marginEnd="@dimen/activity_horizontal_margin"
	android:layout_marginStart="@dimen/activity_horizontal_margin"
	android:elevation="5dp"
	android:foreground="?android:attr/selectableItemBackground"
	android:clickable="true"
	app:cardCornerRadius="5dp"
	app:cardBackgroundColor="@color/RBSBlue"
	android:transitionName="account_shared">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:baselineAligned="false">

		<LinearLayout
			android:layout_width="0dp"
			android:layout_weight="1"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:orientation="vertical">

			<TextView
				android:id="@+id/accountBalance"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/account_balance"
				android:fontFamily="sans-serif"
				android:textColor="@android:color/white"
				android:textSize="@dimen/text_display_1"
				android:textStyle="bold"/>

			<TextView
				android:id="@+id/accountType"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:fontFamily="sans-serif-medium"
				android:text="@string/account_type"
				android:textColor="@android:color/white"
				android:textSize="@dimen/text_headline"/>

			<TextView
				android:id="@+id/accountDetails"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:fontFamily="sans-serif"
				android:text="@string/account_number"
				android:textColor="@android:color/white"
				android:textSize="@dimen/text_subheading"/>

		</LinearLayout>

		<RelativeLayout
			android:layout_width="wrap_content"
			android:layout_height="match_parent"
			android:orientation="vertical">

			<ImageView
				android:layout_width="48dp"
				android:layout_height="48dp"
				android:layout_centerVertical="true"
				android:id="@+id/accountImage"
				android:layout_margin="16dp"
				android:contentDescription="@string/account_image"
				android:src="@mipmap/ic_payment_white_48dp"/>

		</RelativeLayout>

	</LinearLayout>

</android.support.v7.widget.CardView>