<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_payments"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.lloydtucker.bluebankv2.PaymentsActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:titleTextColor="@color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/paymentSpinner" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputSortCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etSortCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sort_code"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputAccountNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etAccountNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_account_number"
                android:inputType="number"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPaymentReference"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPaymentReference"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_reference"
                android:inputType="text"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/inputPaymentAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/etPaymentAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/payment_amount"
                android:inputType="numberDecimal"/>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</RelativeLayout>
